# sbet-rs

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
examples/: csv.rs  filter.rs
src/: lib.rs  main.rs
