[package]
name = "sbet"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "A micro-crate to read and write Smoothed Best Estimate of Trajectory (SBET) data"
readme = "README.md"
repository = "https://github.com/gadomski/sbet-rs"
license = "MIT OR Apache-2.0"
keywords = ["sbet", "airborne", "trajectory"]
categories = [
    "aerospace",
    "command-line-utilties",
    "data-structures",
    "encoding",
    "science::geo",
]

[features]
cli = ["dep:clap"]

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "1"

[[bin]]
name = "sbet"
required-features = ["cli"]
test = false
doc = false
